# Filesys

./: Filesys.cabal  LICENSE  README.md
.stack-work/install/x86_64-linux/lts-8.0/8.0.2/flag-cache/: Filesys-0.1.0.0
docs/: Cli.html  File.html  Main.html  Utils.html  doc-index.html  index-frames.html  index.html  mini_Cli.html  mini_File.html  mini_Main.html  mini_Utils.html
src/: Cli.hs  File.hs  Main.hs  Utils.hs
