name:                Filesys
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hadescho/Filesys#readme
license:             BSD3
license-file:        LICENSE
author:              Nikolay Kotsev
maintainer:          nikolay.t.kotzev@gmail.com
category:            University project
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Filesys
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
